[package]
name = "sassaurs"
version = "0.1.0"
authors = ["Justin Latimer <justinlatimer@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/justinlatimer/sassaurs"
homepage = "https://github.com/justinlatimer/sassaurs"
documentation = "https://github.com/justinlatimer/sassaurs"
description = """
Sass compiler
"""

[lib]
name = "sassaurs"
path = "src/lib.rs"
